Updated Qualiopi and Contact

--- a/contact.html
+++ b/contact.html
@@ -502,7 +502,7 @@
                     <div class="info-icon">♿</div>
                     <div class="info-content">
                         <h3>Accessibilité</h3>
-                        <p>Pour toute situation de handicap, contactez-nous pour répondre à vos besoins spécifiques.</p>
+                        <p>Pour toute situation de handicap, contactez-nous via le formulaire, nous répondrons à vos besoins spécifiques.</p>
                     </div>
                 </div>
             </div>
