--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
             </div>
             <div class="certification-badge">
                 <img class="qualiopi-logo" src="assets/images/QUALIOPI.png" alt="Logo Qualiopi">
-                <h3>Certification Qualité</h3>
+                <h3>Organisme de formation certifié Qualiopi</h3>
                 <p>Le centre de formation Jak Formation a reçu la certification Qualiopi</p>
             </div>
         </div>
