--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
             <div class="hero-text">
                 <div class="hero-badge">
                     <div class="badge-icon">✓</div>
-                    <span>Certification Qualiopi</span>
+                    <span>Organisme de formation certifié Qualiopi</span>
                 </div>
                 <h1>Créez et Développez Votre Entreprise avec Confiance</h1>
                 <p>Formation certifiante pour maîtriser tous les aspects de la création d'entreprise. Éligible CPF.</p>
