--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                         <div class="info-icon">♿</div>
                         <div>
                             <strong>Accessibilité handicap</strong>
-                            <p>Pour toute situation de handicap, contactez-nous à formationjak@gmail.com pour répondre aux besoins spécifiques.</p>
+                            <p>Pour toute situation de handicap, contactez-nous via le formulaire, pour répondre aux besoins spécifiques.</p>
                         </div>
                     </div>
                 </div>
