--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
         const contactForm = document.getElementById('contactForm');
         const successModal = document.getElementById('successModal');
 
-        contactForm.addEventListener('submit', async (e) => {
+       /*  contactForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             
             // Vérifier le captcha
@@ -1161,7 +1161,52 @@
                 submitBtn.disabled = false;
                 submitBtn.textContent = 'Envoyer le message';
             }
+        }); */
+        contactForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const submitBtn = contactForm.querySelector('button[type="submit"]');
+    submitBtn.disabled = true;
+    submitBtn.textContent = 'Envoi en cours...';
+
+    // Générer le token reCAPTCHA v3
+    grecaptcha.ready(function () {
+        grecaptcha.execute('6LcQS-grAAAAAA2zZ0HsS5OvqzWoB0N-avFt10Eu', { action: 'contact' }).then(async function (token) {
+            try {
+                // Envoyer les données avec le token
+                const response = await fetch('https://render-google-recaptcha.onrender.com/api/contact', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        name: document.getElementById('name').value,
+                        email: document.getElementById('email').value,
+                        phone: document.getElementById('phone').value,
+                        message: document.getElementById('message').value,
+                        captcha: token  // <-- ici on envoie le token reCAPTCHA v3
+                    })
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    successModal.style.display = 'flex';
+                    contactForm.reset();
+                } else {
+                    alert('Erreur lors de l\'envoi : ' + (result.message || 'Erreur inconnue'));
+                }
+            } catch (error) {
+                console.error('Erreur:', error);
+                alert('Erreur de connexion. Veuillez réessayer.');
+            } finally {
+                submitBtn.disabled = false;
+                submitBtn.textContent = 'Envoyer le message';
+            }
         });
+    });
+});
+
 
         function closeModal() {
             successModal.style.display = 'none';
