--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
             <button onclick="closeModal()" class="btn btn-primary" style="margin-top: 1.5rem;">Fermer</button>
         </div>
     </div>
-    <script src="https://www.google.com/recaptcha/api.js?render=6LcQS-grAAAAAA2zZ0HsS5OvqzWoB0N-avFt10Eu"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js?render=6LcQS-grAAAAAA2zZ0HsS5OvqzWoB0N-avFt10Eu"></script>
     <script>
         // Gestion du menu burger
         const burger = document.getElementById('burger');
@@ -1272,7 +1272,181 @@
         if (statsSection) {
             statsObserver.observe(statsSection);
         }
-    </script>
+    </script> -->
+    <!-- Charge reCAPTCHA v3 -->
+<script src="https://www.google.com/recaptcha/api.js?render=VOTRE_CLÉ_SITE"></script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        // BURGER MENU
+        const burger = document.getElementById('burger');
+        const navMenu = document.getElementById('navMenu');
+
+        burger.addEventListener('click', () => {
+            navMenu.classList.toggle('active');
+        });
+
+        document.querySelectorAll('.nav-menu a').forEach(link => {
+            link.addEventListener('click', () => {
+                navMenu.classList.remove('active');
+            });
+        });
+
+        // HEADER SCROLL EFFECT
+        const header = document.getElementById('header');
+        const scrollToTopBtn = document.getElementById('scrollToTop');
+
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 100) {
+                header.classList.add('scrolled');
+                scrollToTopBtn.classList.add('visible');
+            } else {
+                header.classList.remove('scrolled');
+                scrollToTopBtn.classList.remove('visible');
+            }
+        });
+
+        // SCROLL TO TOP
+        window.scrollToTop = function () {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        };
+
+        // ANIMATION AU SCROLL
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -100px 0px'
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.card, .competence-item, .info-box').forEach(el => {
+            el.style.opacity = '0';
+            el.style.transform = 'translateY(30px)';
+            el.style.transition = 'all 0.6s ease-out';
+            observer.observe(el);
+        });
+
+        // FORMULAIRE DE CONTACT + reCAPTCHA v3
+        const contactForm = document.getElementById('contactForm');
+        const successModal = document.getElementById('successModal');
+
+        contactForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const submitBtn = contactForm.querySelector('button[type="submit"]');
+            submitBtn.disabled = true;
+            submitBtn.textContent = 'Envoi en cours...';
+
+            grecaptcha.ready(() => {
+                grecaptcha.execute('VOTRE_CLÉ_SITE', { action: 'contact' }).then(async (token) => {
+                    try {
+                        const response = await fetch('http://localhost:3000/api/contact', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify({
+                                name: document.getElementById('name').value,
+                                email: document.getElementById('email').value,
+                                phone: document.getElementById('phone').value,
+                                message: document.getElementById('message').value,
+                                captcha: token
+                            })
+                        });
+
+                        const result = await response.json();
+
+                        if (response.ok) {
+                            successModal.style.display = 'flex';
+                            contactForm.reset();
+                        } else {
+                            alert('Erreur : ' + (result.message || 'Une erreur est survenue.'));
+                        }
+
+                    } catch (error) {
+                        console.error('Erreur réseau :', error);
+                        alert('Erreur de connexion au serveur.');
+                    } finally {
+                        submitBtn.disabled = false;
+                        submitBtn.textContent = 'Envoyer le message';
+                    }
+                });
+            });
+        });
+
+        // FERMETURE DU MODAL
+        function closeModal() {
+            successModal.style.display = 'none';
+        }
+
+        successModal.addEventListener('click', (e) => {
+            if (e.target === successModal) {
+                closeModal();
+            }
+        });
+
+        // SMOOTH SCROLL DES ANCRES
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    const headerHeight = 70;
+                    const targetPosition = target.offsetTop - headerHeight;
+                    window.scrollTo({
+                        top: targetPosition,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+
+        // ANIMATION DES CHIFFRES STATISTIQUES
+        const animateStats = () => {
+            const stats = document.querySelectorAll('.stat-item h3');
+            stats.forEach(stat => {
+                const text = stat.textContent;
+                const number = parseInt(text.replace(/\D/g, ''));
+
+                if (number) {
+                    let current = 0;
+                    const increment = number / 50;
+                    const timer = setInterval(() => {
+                        current += increment;
+                        if (current >= number) {
+                            stat.textContent = text;
+                            clearInterval(timer);
+                        } else {
+                            stat.textContent = Math.floor(current) + text.replace(/\d/g, '');
+                        }
+                    }, 30);
+                }
+            });
+        };
+
+        const statsObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    animateStats();
+                    statsObserver.unobserve(entry.target);
+                }
+            });
+        }, { threshold: 0.5 });
+
+        const statsSection = document.querySelector('.stats');
+        if (statsSection) {
+            statsObserver.observe(statsSection);
+        }
+    });
+</script>
+
 </body>
 </html>
                         
