--- a/contact.html
+++ b/contact.html
@@ -656,7 +656,7 @@
             grecaptcha.ready(() => {
                 grecaptcha.execute('6LcQS-grAAAAAA2zZ0HsS5OvqzWoB0N-avFt10Eu', { action: 'contact' }).then(async (token) => {
                     try {
-                        const response = await fetch('http://localhost:3000/api/contact', {
+                        const response = await fetch('https://jak-formation-website-backend.onrender.com/api/contact', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
