--- a/index.html
+++ b/index.html
@@ -758,9 +758,8 @@
         <p class="section-subtitle">Une formation complète pour concrétiser votre projet entrepreneurial</p>
 
         <div class="certification-notice">
-            <h3>🎓 Formation Certifiante RS7004</h3>
-            <p style="margin-bottom: 1rem;">Cette formation prépare à la certification <strong>"Conduire un projet de création d'entreprise"</strong>, enregistrée le 31/01/2025 au Répertoire Spécifique de France Compétences sous le n° RS7004, et détenue par CréActifs.</p>
-            <p>Cette formation est proposée par JAK Formation, organisme habilité par le certificateur CRÉACTIFS à préparer et organiser l'évaluation RS7004.</p>
+            <h3>🎓 Formation Certifiante <a href="https://creactifs.com/" target="_blank">RS7004</a></h3>
+            <p style="margin-bottom: 1rem;">Cette formation proposée par JAK Formation prépare à la certification <strong>"Conduire un projet de création d'entreprise"</strong>, enregistrée le 31/01/2025 au Répertoire Spécifique de France Compétences sous le n° <a href="https://creactifs.com/" target="_blank">RS7004</a>, et détenue par CréActifs.</p>
             <p style="margin-top: 1rem;"><a href="https://www.francecompetences.fr/recherche/rs/7004/" target="_blank">➜ Consulter la fiche officielle France Compétences</a></p>
         </div>
 
@@ -835,14 +834,14 @@
                         <div class="info-icon">👥</div>
                         <div>
                             <strong>Public visé</strong>
-                            <p>Tout public ayant un projet de création d'une entreprise ou ayant déjà créé son entreprise depuis moins de 2 ans</p>
+                            <p>Tout public ayant un projet de création d'entreprise</p>
                         </div>
                     </div>
                     <div class="info-item">
                         <div class="info-icon">📝</div>
                         <div>
                             <strong>Prérequis</strong>
-                            <p>Bonne connaissance des outils bureautiques. Aisance dans le rédactionnel et le traitement de données chiffrées.</p>
+                            <p>Bonne connaissance des outils bureautiques. Aisance dans le rédactionnel et le traitement de données chiffrées. Disposer d’un ordinateur (PC ou Mac) et d’une connexion Internet haut-débit.</p>
                         </div>
                     </div>
                     <div class="info-item">
