--- a/index.html
+++ b/index.html
@@ -758,9 +758,8 @@
         <p class="section-subtitle">Une formation complète pour concrétiser votre projet entrepreneurial</p>
 
         <div class="certification-notice">
-            <h3>🎓 Formation Certifiante <a href="https://creactifs.com/" target="_blank">RS7004</a></h3>
-            <p style="margin-bottom: 1rem;">Cette formation proposée par JAK Formation prépare à la certification <strong>"Conduire un projet de création d'entreprise"</strong>, enregistrée le 31/01/2025 au Répertoire Spécifique de France Compétences sous le n° <a href="https://creactifs.com/" target="_blank">RS7004</a>, et détenue par CréActifs.</p>
-            <p style="margin-top: 1rem;"><a href="https://www.francecompetences.fr/recherche/rs/7004/" target="_blank">➜ Consulter la fiche officielle France Compétences</a></p>
+            <h3>🎓 Formation Certifiante <a href="https://www.francecompetences.fr/recherche/rs/7004/" target="_blank">RS7004</a></h3>
+            <p style="margin-bottom: 1rem;">Cette formation proposée par JAK Formation prépare à la certification <strong>"Conduire un projet de création d'entreprise"</strong>, enregistrée le 31/01/2025 au Répertoire Spécifique de France Compétences sous le n° <a href="https://www.francecompetences.fr/recherche/rs/7004/" target="_blank">RS7004</a>, et détenue par <a href="https://creactifs.com/" target="_blank">CréActifs</a>.</p>
         </div>
 
         <div class="formation-content">
